force-app/main/default/objects/CLQ_Transaction_Document__c/CLQ_Transaction_Document__c.object-meta.xml
<CustomObject>
    <label>Transaction Document</label>
    <nameField>
        <label>Transaction Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>