force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Approved_Points__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_Points__c</fullName>
    <label>Approved Points</label>
    <length>5</length>
    <type>Text</type>
</CustomField>