force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Approved_Rating__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Approved_Rating__c</fullName>
    <label>Approved Rating</label>
    <length>5</length>
    <type>Text</type>
</CustomField>