force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Assigned_to_email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assigned_to_email__c</fullName>
    <formula>CLQ_Program_Transaction__r.CLQ_Transaction_Assigned_To__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to email</label>
    <type>Text</type>
</CustomField>