force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Assigned_User_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Assigned_User_Email__c</fullName>
    <label>Assigned User Email</label>
    <type>Email</type>
</CustomField>