force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transaction Documents</relationshipLabel>
    <relationshipName>Transaction_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>