force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Document__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>CLQ_Standard_Document__c</referenceTo>
    <relationshipLabel>Transaction Documents</relationshipLabel>
    <relationshipName>Transaction_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>