force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Document_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Document_Comments__c</fullName>
    <label>Document Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>