force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Portal_Document_Comments__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Portal_Document_Comments__c</fullName>
    <description>Created by JSC on 9/28/2016 in order to bypass the field CLQ_Document_Comments__c as this can not be written to through the API.  Instead, this will be hidden to the user and used to augment the CLQ_All_Comments__c field.</description>
    <label>Portal Document Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>