force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Portal_Marked_for_Delete__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Portal_Marked_for_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this transaction document was discovered as a record that is no longer needed, as the document is no longer required according to the current questions.</description>
    <label>Portal Marked for Delete</label>
    <type>Checkbox</type>
</CustomField>