force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Program_No_Formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_No_Formula__c</fullName>
    <formula>CLQ_Program_Transaction__r.CLQ_Program_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program No Formula</label>
    <type>Text</type>
</CustomField>