force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Program_Transaction__c</fullName>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Transaction Documents</relationshipLabel>
    <relationshipName>Transaction_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>