force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_PT_Record_type_formula__c.field-meta.xml
<CustomField>
    <fullName>CLQ_PT_Record_type_formula__c</fullName>
    <formula>CLQ_Program_Transaction__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PT Record type formula</label>
    <type>Text</type>
</CustomField>