force-app/main/default/objects/CLQ_Transaction_Document__c/fields/CLQ_Standard_Detail_Document__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Standard_Detail_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Detail Document</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CLQ_Standard_Detail__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Document</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CLQ_Standard_Detail__c</referenceTo>
    <relationshipLabel>Transaction Documents</relationshipLabel>
    <relationshipName>Transaction_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>