force-app/main/default/objects/CLQ_Transaction_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <formula>TEXT (CLQ_Document__r.CLQ_Integration_Document_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Type</label>
    <type>Text</type>
</CustomField>