force-app/main/default/objects/CLQ_Transaction_Document__c/fields/Portal_New_Document__c.field-meta.xml
<CustomField>
    <fullName>Portal_New_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal New Document</label>
    <type>Checkbox</type>
</CustomField>