force-app/main/default/objects/CLQ_Transaction_Document__c/fields/Program_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Transaction_Type__c</fullName>
    <label>Program Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensing</fullName>
            </value>
            <value>
                <fullName>SUTQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>