force-app/main/default/objects/CLQ_Transaction_Document__c/fields/Std_Doc__c.field-meta.xml
<CustomField>
    <fullName>Std_Doc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Std Doc</label>
    <referenceTo>CLQ_OCLQS_Configuration_Detail__c</referenceTo>
    <relationshipLabel>Transaction Documents</relationshipLabel>
    <relationshipName>Transaction_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>