force-app/main/default/objects/CLQ_Transaction_Document__c/validationRules/Standard_Document_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Standard_Document_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(CLQ_Document__c)&amp;&amp;  ISPICKVAL( CLQ_Document_Status__c , &apos;Approved&apos;)</errorConditionFormula>
    <errorMessage>Standard Document is needed to approve the Transaction Document</errorMessage>
</ValidationRule>