force-app/main/default/objects/CLQ_Transaction_Document__c/listViews/Documents.listView-meta.xml
<ListView>
    <fullName>Documents</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Program_Transaction__c</columns>
    <columns>Document_Type__c</columns>
    <columns>CLQ_Document_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Documents</label>
</ListView>